chore: no zgc (#17)